<resources>
    <string name="app_name">Sifu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_report">Incidencia</string>
    <string name="title_request">Solicitud</string>
    <string name="title_info">Grupo SIFU</string>

    <!-- Main Activity -->
    <string name="textSifu">Sifu</string>
    <string name="textMain">BIENVENIDO A LA APP \nDE GRUPO SIFU</string>
    <string name="textMain2">Bienvenido a la App de Grupo Sifu a través de la cual nos podrás reportar tus incidencias y hacer un seguimiento de las mismas.\n\nToca el botón reportar incidencia y cumplimenta todos los datos para que podamos atenderte lo antes posible.</string>
    <string name="buttonReport">REPORTAR INCIDENCIA</string>
    <string name="buttonRequest">SOLICITUD DE INFORMACIÓN</string>

    <!-- Report Fragment -->
    <string name="titleReport">REPORTAR INCIDENCIA</string>
    <string name="textReport">Si has detectado cualquier incidencia en el servicio que te prestamos, rogamos nos hagas llegar tus comentarios a través del siguiente formulario. \n\nUn gestor especializado se pondrá en contacto contigo a la mayor brevedad.</string>
    <string name="textCheckBox">Al enviar, aceptas que tus datos sean incorporados a la base de datos de Grupo SIFU. Más información.</string>
    <string name="textProvincia">Provincia</string>
    <string name="textImagenes">Subir imágenes</string>
    <string name="textSubirImagen">Subir imagen</string>
    <string name="textSubirOtraImagen">Subir otra imagen</string>
    <string name="buttonEscogeImagen">Escoge una imagen +</string>
    <string name="buttonSubirImagen">Subir otra imagen</string>
    <string name="textViewBorrarImagen">Borrar imagen</string>
    <string name="buttonSend">Enviar</string>
    <string name="buttonSendReport">Enviar</string>

    <!-- Request Fragment -->
    <string name="titleRequest">SOLICITUD DE INFORMACIÓN</string>
    <string name="textRequest">Si deseas recibir información sobre un servicio, solicitar presupuesto o conocer más sobre nuestra empresa, puedes hacernos llegar tus comentarios a través del siguiente formulario.</string>
    <string name="buttonSendRequest">ENVIAR</string>

    <!-- Config Fragment -->
    <string name="titleConfig">CONFIGURACIÓN</string>
    <string name="textConfig">¿Activar notificaciones?</string>

    <!-- Info Fragment -->
    <string name="titleInfo">SOBRE GRUPO SIFU</string>
    <string name="textInfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</string>

    <!-- Incidence Sent Fragment -->
    <string name="titleIncidenceSent">Incidencia enviada</string>
    <string name="infoIncidenceSent">Su incidencia ha sido enviada con éxito. Nos pondremos en contacto con usted lo antes posible. \n\nGracias por utilizar el servicio de registro de incidencias de Grupo SIFU.</string>
    <string name="buttonIncidenceSent">INICIO</string>

    <!-- Request Sent Fragment -->
    <string name="titleRequestSent">Solicitud enviada</string>
    <string name="infoRequestSent">Su solicitud ha sido enviada con éxito. Nos pondremos en contacto con usted lo antes posible. \n\nGracias por utilizar el servicio de registro de solicitud de información de Grupo SIFU.</string>
    <string name="buttonRequestSent">INICIO</string>

    <!-- Urgence Incidence Fragment -->
    <string name="titleUrgenceIncidence">¿INCIDENCIA URGENTE?</string>
    <string name="infoUrgenceIncidence"> ¿Tu incidencia es urgente? \n\nLlámanos</string>
    <string name="buttonCallUrgenceIncidence">LLAMAR</string>
    <string name="buttonHomeUrgenceIncidence">INICIO</string>

    <!-- Menú XML -->
    <string name="menuInfo"></string>
    <string name="titleBack"></string>
</resources>
