<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp" app:showAsAction="ifRoom"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_action_report" app:showAsAction="ifRoom"
        android:title="@string/title_report" />

    <item
        android:id="@+id/navigation_request"
        android:icon="@drawable/ic_action_request" app:showAsAction="ifRoom"
        android:title="@string/title_request" />

    <!--item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_action_info" android:enabled="true" app:showAsAction="ifRoom"
        android:title="@string/title_info" /-->
</menu>
