<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textViewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="8sp"
        android:padding="25sp"
        android:text="@string/textMain"
        android:textSize="20sp"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/buttonReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonReport"
        android:layout_below="@+id/textViewMain"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/buttonRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonReport"
        android:text="@string/buttonRequest" />
</RelativeLayout>