<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/fondo_sifu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="0.49"
                android:src="@drawable/grupo_sifu"/>

            <TextView
                android:id="@+id/titleUrgenceIncidence"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="25sp"
                android:paddingRight="25sp"
                android:text="@string/titleUrgenceIncidence"
                android:textSize="20sp"
                android:textColor="@color/colorBlue"/>

            <TextView
                android:id="@+id/infoUrgenceIncidence"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:lineSpacingExtra="2sp"
                android:layout_margin="25dp"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/infoUrgenceIncidence"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:background="@color/colorGrey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCallUrgenceIncidence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:background="@drawable/shape_orange_buttons"
                    android:text="@string/buttonCallUrgenceIncidence"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"/>

                <Button
                    android:id="@+id/buttonHomeUrgenceIncidence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/buttonHomeUrgenceIncidence"
                    android:background="@drawable/shape_orange_buttons"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>