<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_sifu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textViewInfoRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="2sp"
                android:layout_margin="25dp"
                android:padding="15dp"
                android:text="@string/textRequest"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:background="@color/colorGrey"
                android:layout_alignParentStart="true"/>

            <!-- Nombre label -->
            <EditText
                android:id="@+id/input_nombre"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_forms_edittext"
                android:hint="Nombre"
                android:textSize="16sp"
                android:paddingLeft="25sp"
                android:paddingRight="25sp"
                android:textColorHint="@color/colorBlue"
                android:textColor="@color/colorBlue"/>

            <!-- Apellidos label -->
            <EditText
                android:id="@+id/input_apellidos"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_forms_edittext"
                android:hint="Apellidos"
                android:textSize="16sp"
                android:paddingLeft="25sp"
                android:paddingRight="25sp"
                android:textColorHint="@color/colorBlue"
                android:textColor="@color/colorBlue"/>

            <!-- Email label -->
            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_forms_edittext"
                android:hint="Email"
                android:textSize="16sp"
                android:paddingLeft="25sp"
                android:paddingRight="25sp"
                android:textColorHint="@color/colorBlue"
                android:textColor="@color/colorBlue"/>

            <!-- Teléfono label -->
            <EditText
                android:id="@+id/input_telefono"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_forms_edittext"
                android:hint="Teléfono"
                android:textSize="16sp"
                android:inputType="number"
                android:paddingLeft="25sp"
                android:paddingRight="25sp"
                android:textColorHint="@color/colorBlue"
                android:textColor="@color/colorBlue"/>

            <!-- Provincia label -->
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_forms_edittext"
                android:hint="Provincia"
                android:textSize="16sp"
                android:paddingLeft="25sp"
                android:paddingRight="25sp"
                android:textColorHint="@color/colorBlue" />

            <!-- Comentarios label -->
            <EditText
                android:id="@+id/input_comentarios"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_forms_edittext"
                android:hint="Comentarios"
                android:textSize="16sp"
                android:paddingTop="15dp"
                android:paddingLeft="25sp"
                android:paddingRight="25sp"
                android:textColorHint="@color/colorBlue"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="4"
                android:scrollHorizontally="true"/>

            <!-- Checkbox Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:paddingLeft="25sp"
                android:paddingRight="25sp">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/textCheckBox"
                    android:textColor="@color/colorBlue"
                    android:textSize="12sp"/>
            </android.support.design.widget.TextInputLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/buttonEnviar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="25dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/shape_orange_buttons"
                    android:text="@string/buttonSendReport"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:visibility="invisible"/>

                <Button
                    android:id="@+id/buttonSendRequest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="25dp"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/shape_orange_buttons"
                    android:text="@string/buttonSendRequest"
                    android:textSize="15sp"
                    android:textColor="@color/colorWhite"
                    android:layout_toRightOf="@id/buttonEnviar2" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>